Début ajout des segments